--- a/src/quizpage.css
+++ b/src/quizpage.css
@@ -282,32 +282,43 @@
    
 }
 
-
-/* @media only screen and (max-width: 375px) {
-
-
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 823px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) {
     .block__section {
-        height: 78%;
+        height: auto;
     }
 
-   .block__section__next, .block__section__prev {
+    .loader {
+        position: static;
+        height: 450px;
+        margin-top: 16%;
+    }
+
+    .block__section > h4 {
+        margin: 50px 0 30px 0;
+    }
+
+    .block__section > h5 {
+        margin-bottom: 20px;
+    }
+
+   .block__section__next, .block__section__prev, .block__section__prev:disabled {
         width: 100%;
         margin: 5px 0;
     } 
 
-    .block__section > h4 {
-        margin-bottom: 10px;
-    }
-
     .block__section__questionBox > h3 {
-        margin-bottom: 5px;
+        margin-bottom: 30px;
         width: 65%;
-        height: 80px;
-        font-size: 1rem;
+        height: auto;
     }
 
     .block__section__changePage {
-       width: 60%
+       width: 60%;
+       margin-bottom: 40px;
     }
 
     .block__section__questionBox > h3,  
@@ -315,6 +326,51 @@
         width: 95%;
     }
 
-   
+  }
+
+  @media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 731px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+  
+    .block__section {
+        height: auto;
+    }
+
+    .loader {
+        position: static;
+        height: 450px;
+        margin-top: 16%;
+    }
+
+    .block__section > h4 {
+        margin: 50px 0 30px 0;
+    }
+
+    .block__section > h5 {
+        margin-bottom: 20px;
+    }
+
+   .block__section__next, .block__section__prev, .block__section__prev:disabled {
+        width: 100%;
+        margin: 5px 0;
+    } 
+
+    .block__section__questionBox > h3 {
+        margin-bottom: 30px;
+        width: 65%;
+        height: auto;
+    }
+
+    .block__section__changePage {
+       width: 60%;
+       margin-bottom: 40px;
+    }
+
+    .block__section__questionBox > h3,  
+    .block__section__questionBox-answers {
+        width: 95%;
+    }
+
 }
- */
